load_balancer/cloudformation/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Auto Scaling Group with Application Load Balancer

Resources:

#################################################
# VPC
#################################################

  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 11.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

      Tags:
        - Key: Name
          Value: MyVPC

#################################################
# Internet Gateway
#################################################

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment

    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

#################################################
# Public Subnets
#################################################

  PublicSubnet1:
    Type: AWS::EC2::Subnet

    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 11.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true

      Tags:
        - Key: Name
          Value: PublicSubnet1

  PublicSubnet2:
    Type: AWS::EC2::Subnet

    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 11.0.2.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true

      Tags:
        - Key: Name
          Value: PublicSubnet2

#################################################
# Route Table
#################################################

  PublicRouteTable:
    Type: AWS::EC2::RouteTable

    Properties:
      VpcId: !Ref MyVPC

  DefaultRoute:
    Type: AWS::EC2::Route

    DependsOn: AttachGateway

    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  Subnet1RouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  Subnet2RouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

#################################################
# Security Group
#################################################

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup

    Properties:
      GroupDescription: Allow HTTP and SSH
      VpcId: !Ref MyVPC

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0


#################################################
# Launch Template
#################################################

  WebLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate

    Properties:
      LaunchTemplateName: WebLaunchTemplate

      LaunchTemplateData:

        ImageId: ami-0236922087fa98b6e
        InstanceType: t3.micro

        SecurityGroupIds:
          - !Ref WebSecurityGroup

        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash

            yum update -y
            yum install -y httpd

            systemctl enable httpd
            systemctl start httpd

            TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token" \
              -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")

            INSTANCE_ID=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" \
              -s http://169.254.169.254/latest/meta-data/instance-id)

            HOSTNAME=$(hostname)

            PRIVATE_IP=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" \
              -s http://169.254.169.254/latest/meta-data/local-ipv4)

            AZ=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" \
              -s http://169.254.169.254/latest/meta-data/placement/availability-zone)

            cat > /var/www/html/index.html <<HTML
            <!DOCTYPE html>
            <html>
            <head>
                <title>AWS ALB Demo</title>

                <style>
                    body {
                        background: #f2f2f2;
                        font-family: Arial;
                        text-align: center;
                        padding-top: 100px;
                    }

                    .card {
                        background: white;
                        width: 600px;
                        margin: auto;
                        padding: 30px;
                        border-radius: 10px;
                        box-shadow: 0 0 10px rgba(0,0,0,0.2);
                    }
                </style>

            </head>

            <body>

                <div class="card">

                    <h1>CloudFormation ALB Demo</h1>

                    <h2>Hostname: $HOSTNAME</h2>

                    <h2>Instance ID: $INSTANCE_ID</h2>

                    <h2>Private IP: $PRIVATE_IP</h2>

                    <h2>Availability Zone: $AZ</h2>

                </div>

            </body>
            </html>
            HTML

#################################################
# Application Load Balancer
#################################################

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer

    Properties:
      Name: MyALB
      Scheme: internet-facing
      Type: application

      SecurityGroups:
        - !Ref WebSecurityGroup

      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2

#################################################
# Target Group
#################################################

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup

    Properties:
      Name: MyTargetGroup
      Port: 80
      Protocol: HTTP
      VpcId: !Ref MyVPC
      TargetType: instance

      HealthCheckPath: /
      HealthCheckProtocol: HTTP

#################################################
# Listener
#################################################

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener

    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

#################################################
# Auto Scaling Group
#################################################

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup

    Properties:
      MinSize: '2'
      MaxSize: '4'
      DesiredCapacity: '2'

      VPCZoneIdentifier:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2

      TargetGroupARNs:
        - !Ref TargetGroup

      LaunchTemplate:
        LaunchTemplateId: !Ref WebLaunchTemplate
        Version: !GetAtt WebLaunchTemplate.LatestVersionNumber

      Tags:
        - Key: Name
          Value: CloudFormation-ASG-Instance
          PropagateAtLaunch: true

#################################################
# Outputs
#################################################

Outputs:

  LoadBalancerDNS:
    Description: Load Balancer DNS Name

    Value: !GetAtt ApplicationLoadBalancer.DNSName
